--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@ __pycache__
 /faiss_db/faiss_index
 /faiss_db/csv_faiss_index
 /faiss_db/image_desc_faiss_index
-tree.txt
+tree.txtvenv/
+.env
+sdpenv/
